fix overlapping text on mobile

--- a/src/styles/Services.scss
+++ b/src/styles/Services.scss
@@ -8,7 +8,7 @@
     }
 
     @media (max-width: 500px) {
-        margin: -4rem auto 10rem;
+        margin: -2rem auto 10rem;
     }
 
     ul {
